@@ -7,6 +7,9 @@ Version 0.13
  Logger: Add columns to log if tables already existed
  Logger: Create DB with IF NOT EXISTS to reduce warnings
  Logger: Add tripid column to obd and gps tables
+ Logrepair: Add tripid column to obd and gps tables
+ Kml: Use tripids where possible instead of times to key on trips
+ Kml: Warn if tripids are missing from obd or gps tables
 
 Version 0.12 (released 2010-01-03)
  ftdipty: Support user-specified device and vendor ids
